# ZynSearch

./: .gitignore  Cargo.toml  README.md  README_ZynSearch_Overview.md  index.html  readme.md  todo.md  zynsearch.config.json
crates/zynsearch-cli/: Cargo.toml
crates/zynsearch-cli/src/: main.rs
crates/zynsearch-core/: Cargo.toml  README.md  README_ZynSearch_Core.md
crates/zynsearch-core/src/: api.rs  bm_wand.rs  collection_stats.rs  compression.rs  config.rs  dictionary.rs  document_ingest.rs  engine.rs  index.rs  ingestion.rs  multi_reader.rs  query_pipeline.rs  searcher.rs  skip_posting.rs  storage.rs  wal.rs
crates/zynsearch-server/: Cargo.toml
crates/zynsearch-server/src/: http.rs  main.rs
docs/: todo.md
proto/: README.md  README_ZynSearch_Proto.md
sdks/zynsearch-go/: README.md  README_ZynSearch_Go_SDK.md  client.go  go.mod
sdks/zynsearch-js/: README.md  README_ZynSearch_JavaScript_SDK.md
sdks/zynsearch-py/: README.md  README_ZynSearch_Python_SDK.md  pyproject.toml
sdks/zynsearch-py/src/: client.py
sdks/zynsearch-py/src/zynsearch_py/: __init__.py
src/: analyzer.rs  bitmap.rs  bm25.rs  bm_wand.rs  boolean_query.rs  collection_stats.rs  config.rs  dictionary.rs  document_ingest.rs  engine.rs  index.rs  layout.rs  lib.rs  main.rs  memtable.rs  merge_policy.rs  multi_protocol.rs  multi_reader.rs  query_pipeline.rs  sc_ga.rs  searcher.rs  segment.rs  sharding.rs  skip_posting.rs  storage.rs  top_k.rs  wal.rs  wire_framing.rs
