[package]
name = "zynsearch-core"
version = "0.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.32", features = ["full"] }
walkdir = "2.4.0"
libc = "0.2.186"
memmap2 = "0.9.11"
stop-words = "0.10.0"
rust-stemmers = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
roaring = "0.10.2"
crossbeam-skiplist = "0.1"
rayon= "1.10"
fst = "0.4"
csv = "1.3"
calamine = "0.26"
zip = "2.2"
quick-xml = "0.37"
lopdf = "0.35"
object_store = { version = "0.11", features = ["aws"] }
futures = "0.3"
