[package]
name = "zynsearch-server"
version = "0.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zynsearch-core = { path = "../zynsearch-core" }
