[package]
name = "zynsearch-server"
version = "0.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.13"
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = "0.12"
axum = "0.7"
base64 = "0.22"
tower-http = { version = "0.5", features = ["trace"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pemfile = "2.2"
zynsearch-core = { path = "../zynsearch-core" }

[build-dependencies]
tonic-build = "0.12"
